# chess_engine

./: .gitignore  Cargo.toml  README.md  run_chess_app.sh
chess-app/: README.md  package-lock.json  package.json
chess-app/src/: App.vue
chess-app/src/components/: ChessBoard.vue
chess-app/src/logic/: rectangle.js
chess-static/: package-lock.json  package.json
chess-static/src/: index.js
src/: api.rs  chess.rs  main.rs
src/api/: chess_api.rs
src/chess/: bitboard_util.rs  board.rs  castle_utils.rs  cmove.rs  color.rs  direction.rs  fen.rs  move_api.rs  move_executor.rs  move_generator.rs  move_table.rs  piece.rs  position.rs
src/game/: agent.rs
src/server/: mod.rs
