[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
actix-web = "4"
json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.6.4"

[profile.dev]
opt-level=3

[profile.release]
debug = 1
